# cagey-math

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build
doc/: Doxyfile.in  meson.build  namespaces.dox
include/cagey-math/: CageyMath.hh  Constants.hh  Degree.hh  Math.hh  MathFwd.hh  Matrix.hh  Matrix22.hh  MatrixFunc.hh  Vector.hh  Vector2.hh  Vector3.hh  Vector4.hh  VectorFunc.hh  VectorOld.hh  matrix.hh
include/cagey-math/detail/: BaseAngle.hh  BasePoint.hh  BaseVector.hh  ConstExprUtil.hh  Matrix.hh  MetaUtil.hh  RectangularMatrix.hh  Util.hh  Vector.hh  Vector2.hh  VectorOpImpl.hh  vec_type.hh
include/cagey-math/old/: BaseAngle.hh  Radian.hh  Vector.hh  VectorOld1.hh  VectorOld2.hh
include/cagey/math/: MathFwd.hh  Vector.hh  Vector2.hh  Vector3.hh  Vector4.hh
include/cagey/math/detail/: MetaUtil.hh  TypeTraits.hh
test/: DegreeTests.cc  Matrix22Tests.cc  MatrixTests.cc  Vector2Tests.cc  Vector3Tests.cc  Vector4Tests.cc  VectorTests.cc  meson.build
